2011-12-24 Julien Nicoulaud <julien.nicoulaud@gmail.com>

	* 20111224-1 :
	Initial release of the package.
