@@ -2,14 +2,14 @@
 # Source: https://github.com/nicoulaj/archlinux-packages
 pkgname=gatling-stress-tool-git # Name collision with https://aur.archlinux.org/packages.php?ID=7159
 _pkgname=gatling
-pkgver=20111224
+pkgver=20120109
 pkgrel=1
 pkgdesc="An optimized stress test tool."
 arch=(any)
 url="https://github.com/excilys/gatling"
 license=(APACHE)
-depends=("java-environment>=6" "bash")
-makedepends=('git' 'maven')
+depends=('java-environment>=6' 'bash' 'desktop-file-utils')
+makedepends=(git maven)
 install=${_pkgname}.install
 changelog=Changelog
 provides=(gatling-stress-tool)
@@ -40,6 +40,25 @@ EOF
   cat <<EOF > "${srcdir}"/${_pkgname}.profile.d.csh
 setenv GATLING_HOME "/opt/${_pkgname}"
 EOF
+
+  msg2 "Generate executable script for recorder..."
+  cat > "${srcdir}/${_pkgname}-recorder.sh" << EOF
+#!/bin/sh
+"\$JAVA_HOME/bin/java" -jar "\$GATLING_HOME"/recorder/${_pkgname}-recorder-*.jar "\$@"
+EOF
+
+  msg2 "Generate desktop application entry for recorder..."
+  cat > "${srcdir}/${_pkgname} recorder.desktop" << EOF
+[Desktop Entry]
+Name=Gatling recorder
+Comment=${pkgdesc}
+TryExec=${_pkgname}-recorder
+Exec=${_pkgname}-recorder %u
+Icon=/opt/gatling/assets/style/logo.png
+Terminal=false
+Type=Application
+Categories=Application;Utility;
+EOF
 }
 
 package() {
@@ -64,9 +83,12 @@ package() {
   ln -s /opt/${_pkgname}/conf/${_pkgname}.conf "${pkgdir}/etc/${_pkgname}/${_pkgname}.conf"
   ln -s /opt/${_pkgname}/conf/logback.xml      "${pkgdir}/etc/${_pkgname}/logback.xml"
 
-  msg2 "Install links to executables in /usr/bin..."
-  install -dm755                            "${pkgdir}/usr/bin"
+  msg2 "Install executables in /usr/bin..."
+  install -Dm755 "${srcdir}/${_pkgname}-recorder.sh" "${pkgdir}/usr/bin/${_pkgname}-recorder"
   ln -s /opt/${_pkgname}/bin/${_pkgname}.sh "${pkgdir}/usr/bin/${_pkgname}"
+
+  msg2 "Install a desktop application entry for the recorder at /usr/share/applications..."
+  install -Dm644 "${srcdir}/${_pkgname} recorder.desktop" "${pkgdir}/usr/share/applications/${_pkgname} recorder.desktop"
 
   msg2 "Fix some permissions..."
   chmod +x "${pkgdir}/opt/${_pkgname}/bin/${_pkgname}.sh"
