@@ -5,6 +5,7 @@ post_install() {
   echo "* Make sure you grant proper write rights for the /opt/gatling/results directory to"
   echo "  the user that will run Gatling."
   echo "------------------------------------------------------------------------------------"
+  update-desktop-database -q
 }
 
 post_upgrade() {
