@@ -62,11 +62,8 @@ package() {
   ln -s /opt/${_pkgname}/conf/logback.xml      "${pkgdir}/etc/${_pkgname}/logback.xml"
 
   msg2 "Install links to executables in /usr/bin..."
-  install -dm755                            "${pkgdir}/usr/bin"
-  ln -s /opt/${_pkgname}/bin/${_pkgname}.sh "${pkgdir}/usr/bin/${_pkgname}"
-
-  msg2 "Install an executable for the recorder at /usr/bin/${pkgname}..."
   install -Dm755 "${srcdir}/${_pkgname}-recorder.sh" "${pkgdir}/usr/bin/${_pkgname}-recorder"
+  ln -s /opt/${_pkgname}/bin/${_pkgname}.sh "${pkgdir}/usr/bin/${_pkgname}"
 
   msg2 "Install a desktop application entry for the recorder at /usr/share/applications..."
   install -Dm644 "${srcdir}/${_pkgname} recorder.desktop" "${pkgdir}/usr/share/applications/${_pkgname} recorder.desktop"
