@@ -1,3 +1,8 @@
+2012-01-09 Julien Nicoulaud <julien.nicoulaud@gmail.com>
+
+	* 20120109-1 :
+	Deploy script and desktop application entry for recorder.
+
 2011-12-24 Julien Nicoulaud <julien.nicoulaud@gmail.com>
 
 	* 20111224-1 :
